created xaml structure

--- a/miniTC/miniTC/MainWindow.xaml
+++ b/miniTC/miniTC/MainWindow.xaml
@@ -5,8 +5,59 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:miniTC"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MiniTotalCommander" MinHeight="600" MinWidth="550" Height="600" Width="550">
+    <Grid Background="#FFE5E5E5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="0.2*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Grid.ColumnSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
+                <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label Content="path" Margin="20 0"/>
+                    <TextBox Text="path" Width="200" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"  IsEnabled="False" />
+                </StackPanel>
+                <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label Content="drive" Margin="20 0"/>
+                    <ComboBox Width="50">
+                        <ComboBoxItem Content="dsadas"/>
+                        <ComboBoxItem Content="dsadas"/>
+                    </ComboBox>
+                </StackPanel>
+                <ListBox Margin="10" MinHeight="350">
+                    <ListBoxItem>dsa</ListBoxItem>
+                </ListBox>
+            </StackPanel>
+
+            <StackPanel Orientation="Vertical" Grid.Column="1">
+                <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label Content="path" Margin="20 0"/>
+                    <TextBox Text="path" Width="200" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" IsEnabled="False"/>
+                </StackPanel>
+                <StackPanel x:Name="stackPanel" Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label Content="drive" Margin="20 0"/>
+                    <ComboBox Width="50">
+                        <ComboBoxItem Content="dsadas"/>
+                        <ComboBoxItem Content="dsadas"/>
+                    </ComboBox>
+                </StackPanel>
+                
+                <ListBox x:Name="listBox" Margin="10" MinHeight="350">
+                        <ListBoxItem>dsa</ListBoxItem>
+                </ListBox>
+
+            </StackPanel>
+        </Grid>
+        <StackPanel Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2">
+            <Button Content="Copy >>" HorizontalAlignment="Center"/>
+        </StackPanel>
     </Grid>
 </Window>
