--- a/miniTC/miniTC/PanelTC.xaml
+++ b/miniTC/miniTC/PanelTC.xaml
@@ -4,22 +4,43 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:miniTC"
+        xmlns:vm="clr-namespace:miniTC.ViewModel"
+             xmlns:rs="clr-namespace:miniTC.Properties" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="275">
-    <StackPanel Grid.Column="0">
+
+    <UserControl.Resources>
+        <vm:PanelViewModel x:Key="viewModel"/>
+        <rs:Resources x:Key="resources"/>
+    </UserControl.Resources>
+    
+    <StackPanel Grid.Column="0" DataContext="{StaticResource viewModel}">
         <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Label Content="path" Margin="20 0"/>
-            <TextBox Text="path" Width="200" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"  IsEnabled="False" />
+            <Label Content="{Binding PathLabel, Source={StaticResource ResourceKey=resources}}" Margin="20 0"/>
+            <TextBox Text="{Binding SelectedPath}" Width="200" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"  IsEnabled="False" />
         </StackPanel>
         <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Label Content="drive" Margin="20 0"/>
-            <ComboBox Width="50">
-                <ComboBoxItem Content="dsadas"/>
-                <ComboBoxItem Content="dsadas"/>
+            <Label Content="{Binding DriveLabel, Source={StaticResource ResourceKey=resources}}" Margin="20 0"/>
+
+            <ComboBox Width="50" ItemsSource="{Binding Drives}" SelectedItem="{Binding SelectedPath}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="DropDownOpened">
+                        <i:InvokeCommandAction Command="{Binding UpdateDrives, Mode=OneWay, Source={StaticResource viewModel}}" CommandParameter="{StaticResource viewModel}"/>
+                    </i:EventTrigger>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding GetFiles, Mode=OneWay, Source={StaticResource viewModel}}" CommandParameter="{StaticResource viewModel}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </ComboBox>
         </StackPanel>
-        <ListBox Margin="10" MinHeight="350">
-            <ListBoxItem>dsa</ListBoxItem>
+        <ListBox Margin="10" MinHeight="350" ItemsSource="{Binding Files}" SelectedItem="{Binding SelectedFile}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="350" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                <i:InvokeCommandAction Command="{Binding GetFiles, Mode=OneWay, Source={StaticResource viewModel}}" CommandParameter="{StaticResource viewModel}"/>
+            </i:EventTrigger>
+            </i:Interaction.Triggers>
+
         </ListBox>
+
     </StackPanel>
 </UserControl>
