--- a/miniTC/miniTC/PanelTC.xaml
+++ b/miniTC/miniTC/PanelTC.xaml
@@ -4,17 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:miniTC"
-        xmlns:vm="clr-namespace:miniTC.ViewModel"
              xmlns:rs="clr-namespace:miniTC.Properties" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="275">
 
     <UserControl.Resources>
-        <vm:PanelViewModel x:Key="viewModel"/>
         <rs:Resources x:Key="resources"/>
     </UserControl.Resources>
     
-    <StackPanel Grid.Column="0" DataContext="{StaticResource viewModel}">
+    <StackPanel Grid.Column="0" >
         <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Right">
             <Label Content="{Binding PathLabel, Source={StaticResource ResourceKey=resources}}" Margin="20 0"/>
             <TextBox Text="{Binding SelectedPath}" Width="200" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"  IsEnabled="False" />
@@ -25,10 +23,7 @@
             <ComboBox Width="50" ItemsSource="{Binding Drives}" SelectedItem="{Binding SelectedPath}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="DropDownOpened">
-                        <i:InvokeCommandAction Command="{Binding UpdateDrives, Mode=OneWay, Source={StaticResource viewModel}}" CommandParameter="{StaticResource viewModel}"/>
-                    </i:EventTrigger>
-                    <i:EventTrigger EventName="SelectionChanged">
-                        <i:InvokeCommandAction Command="{Binding GetFiles, Mode=OneWay, Source={StaticResource viewModel}}" CommandParameter="{StaticResource viewModel}"/>
+                        <i:InvokeCommandAction Command="{Binding UpdateDrives, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" />
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </ComboBox>
@@ -36,8 +31,8 @@
         <ListBox Margin="10" MinHeight="350" ItemsSource="{Binding Files}" SelectedItem="{Binding SelectedFile}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="350" >
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
-                <i:InvokeCommandAction Command="{Binding GetFiles, Mode=OneWay, Source={StaticResource viewModel}}" CommandParameter="{StaticResource viewModel}"/>
-            </i:EventTrigger>
+                    <i:InvokeCommandAction Command="{Binding GetFiles, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" />
+                </i:EventTrigger>
             </i:Interaction.Triggers>
 
         </ListBox>
